change AI model + fix low framerate
